<resources>
    <string name="app_name">FootBall Live</string>
    <string name="search">Search</string>
    <string name="loading">Loading..</string>
    <string name="network">Network</string>
    <string name="no_internet">Oops, you are not connected to the internet! Try again?</string>
    <string name="bad_request">Bad Request</string>
    <string name="error">Error</string>
    <string name="exception">"Something may have gone wrong. Please try again."</string>
    <string name="empty">N/A</string>
    <string name="leagues">Leagues</string>
    <string name="select_league">Select League</string>
    <string name="team_fixture">Team Fixture</string>
    <string name="table">Table</string>
    <string name="fixture">Fixtures</string>
    <string name="topscorers">Top Scorers</string>
    <string name="transfers">Transfers</string>
    <string name="mp">MP</string>
    <string name="all_games">All Games</string>
    <string name="fixtures">Fixtures</string>
    <string name="search_hint">Type your search here</string>
    <string name="country_name">Country Name</string>
</resources>
