<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_01"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/allLinearLayout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/allImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_ball_gray" />

            <TextView
                android:id="@+id/allTextView"
                style="@style/Label03_Multi_Line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/all_games"
                android:textColor="@color/text_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fixtureLinearLayout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fixtureImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_24_light_gray" />

            <TextView
                android:id="@+id/fixtureTextView"
                style="@style/Label03_Multi_Line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/fixtures"
                android:textColor="@color/text_light_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/liveScoreLinearLayout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:id="@+id/imageView33"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/bg_live_circle" />

            <TextView
                android:id="@+id/liveTextView"
                style="@style/Label03_Multi_Line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="LIVE"
                android:textColor="@color/text_light_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teamLinearLayout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/teamImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_heart_gray_light" />

            <TextView
                android:id="@+id/teamTextView"
                style="@style/Label03_Multi_Line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="My Teams"
                android:textColor="@color/text_light_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gameLinearLayout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/gameImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_my_game_gray_light" />

            <TextView
                android:id="@+id/gameTextView"
                style="@style/Label03_Multi_Line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="My Games"
                android:textColor="@color/text_light_gray" />
        </LinearLayout>

    </LinearLayout>

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/liveListRecyclerView"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_marginLeft="10dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:layout_marginRight="10dp"-->
    <!--        android:layout_marginBottom="10dp"-->
    <!--        android:background="@color/bg_01"-->
    <!--        android:clipToPadding="false"-->
    <!--        android:overScrollMode="never"-->
    <!--        android:visibility="gone" />-->


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <HorizontalScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:nestedScrollingEnabled="false"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/allMainLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/bg_01"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/allEmptyTextView"
                        style="@style/Label02_Multi_Line"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/border_round_white"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="No Game Available for today"
                        android:textColor="@color/text_gray"
                        android:visibility="visible" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/todayListRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/bg_01"
                        android:clipToPadding="false"
                        android:overScrollMode="never"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fixtureMainLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/bg_01"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/default_padding"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="@dimen/default_padding"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/textView11"
                            style="@style/Header02"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Match Day"
                            android:textColor="@color/text_gray" />

                        <LinearLayout
                            android:id="@+id/datePickerLinearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingBottom="10dp">

                            <TextView
                                android:id="@+id/dateTextView"
                                style="@style/Label02_Multi_Line"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/empty"
                                android:textColor="@color/home_text_gray" />

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginLeft="@dimen/default_padding"
                                app:srcCompat="@drawable/ic_calender" />
                        </LinearLayout>

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="0.5dp"
                            android:background="@color/text_light_gray" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/fixtureListRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/bg_01"
                            android:clipToPadding="false"
                            android:overScrollMode="never"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/fixtureEmptyTextView"
                            style="@style/Label02_Multi_Line"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@drawable/border_round_white"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="No Game Available for today"
                            android:textColor="@color/text_gray"
                            android:visibility="visible" />

                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/liveMainLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/bg_01"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/liveEmptyTextView"
                        style="@style/Label02_Multi_Line"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/border_round_white"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="No Game Available for today"
                        android:textColor="@color/text_gray"
                        android:visibility="visible" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/liveListRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/bg_01"
                        android:clipToPadding="false"
                        android:overScrollMode="never"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/teamMainLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/bg_01"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/teamEmptyTextView"
                        style="@style/Label02_Multi_Line"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/border_round_white"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="No Team Available"
                        android:textColor="@color/text_gray"
                        android:visibility="visible" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/teamListRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/bg_01"
                        android:clipToPadding="false"
                        android:overScrollMode="never"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/matchMainLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/bg_01"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/matchEmptyTextView"
                        style="@style/Label02_Multi_Line"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/border_round_white"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="No Saved Match Available"
                        android:textColor="@color/text_gray"
                        android:visibility="visible" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/matchListRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/bg_01"
                        android:clipToPadding="false"
                        android:overScrollMode="never"
                        android:visibility="visible" />
                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:foregroundGravity="center"
            android:nestedScrollingEnabled="true"
            android:overScrollMode="never"
            android:visibility="gone" />

    </FrameLayout>


</LinearLayout>